# ml-algorithms-dictionary

./: pyproject.toml  workspace.code-workspace
.devcontainer/: devcontainer.json
src/chapter_2/: 01-linear-regression.ipynb  02-regularization.ipynb  03-logistic-regression.ipynb  04-support-vector-machine.ipynb  05-support-vector-machine-kernel.ipynb
